// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxfxyev {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary500);
  cursor: pointer;
  font-family: var(--sx-fonts-sans);
  text-decoration: none;
}

.sxfxyev:focus,
.sxfxyev:hover {
  color: var(--sx-colors-primary900);
  text-decoration: underline;
}

.sxfxyev:active {
  color: var(--sx-colors-primary500);
}

.sxfey5o > .sxfxyev,
.sx2g5mn > .sxfxyev,
.sx03kze > .sxfxyev {
  font-size: 100%;
  line-height: 1;
}

.sxfey5o > .sxfxyev::before,
.sxfey5o > .sxfxyev::after,
.sx2g5mn > .sxfxyev::before,
.sx2g5mn > .sxfxyev::after,
.sx03kze > .sxfxyev::before,
.sx03kze > .sxfxyev::after {
  content: none;
}

.sxfxyevjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sxfxyevjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxfxyevjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

<div>
  <a
    class="sxfxyev sxfxyevjqqvr--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxfxyev {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary500);
  cursor: pointer;
  font-family: var(--sx-fonts-sans);
  text-decoration: none;
}

.sxfxyev:focus,
.sxfxyev:hover {
  color: var(--sx-colors-primary900);
  text-decoration: underline;
}

.sxfxyev:active {
  color: var(--sx-colors-primary500);
}

.sxfey5o > .sxfxyev,
.sx2g5mn > .sxfxyev,
.sx03kze > .sxfxyev {
  font-size: 100%;
  line-height: 1;
}

.sxfey5o > .sxfxyev::before,
.sxfey5o > .sxfxyev::after,
.sx2g5mn > .sxfxyev::before,
.sx2g5mn > .sxfxyev::after,
.sx03kze > .sxfxyev::before,
.sx03kze > .sxfxyev::after {
  content: none;
}

.sxfxyevjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sxfxyevjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxfxyevjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxfxyevg0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxfxyevg0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxfxyevg0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxfxyev sxfxyevg0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
